--- a/Cinema/MainWindow.xaml
+++ b/Cinema/MainWindow.xaml
@@ -1,14 +1,17 @@
 ﻿<Window x:Name="mainMindow" x:Class="Cinema.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="469" Width="644" Loaded="OnLoad">
+        Title="MainWindow" Height="469" Width="644" Loaded="OnLoad" ResizeMode="CanMinimize" Top="0" Left="0" WindowState="Maximized">
     <Grid x:Name="grd" AllowDrop="True" Margin="0" Height="441" VerticalAlignment="Top">
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <ComboBox x:Name="cbCinemaHall" Margin="0,10,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="120" SelectionChanged="cbCinemaHall_SelectionChanged" Height="22"/>
-        <ComboBox x:Name="cbShowTime" HorizontalAlignment="Right" Margin="0,65,10,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbShowTime_SelectionChanged" Height="22"/>
-        <ComboBox x:Name="cbMovie" Margin="0,121,10,0" VerticalAlignment="Top" SelectionChanged="cbMovie_SelectionChanged" HorizontalAlignment="Right" Width="120" Height="22"/>
-        <Canvas x:Name="grdMain" HorizontalAlignment="Left" Height="395" Margin="22,22,0,0" VerticalAlignment="Top" Width="459"/>
+        <ComboBox x:Name="cbCinemaHall" Margin="0,60,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="120" SelectionChanged="cbCinemaHall_SelectionChanged" Height="22"/>
+        <ComboBox x:Name="cbShowTime" HorizontalAlignment="Right" Margin="0,120,10,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbShowTime_SelectionChanged" Height="22"/>
+        <ComboBox x:Name="cbMovie" Margin="0,180,10,0" VerticalAlignment="Top" SelectionChanged="cbMovie_SelectionChanged" HorizontalAlignment="Right" Width="120" Height="22"/>
+        <Canvas x:Name="grdMain" HorizontalAlignment="Left" Height="352" VerticalAlignment="Top" Width="481" Margin="0,65,0,0"/>
+        <Label Content="Зал" HorizontalAlignment="Right" Margin="0,34,10,381" Width="120" HorizontalContentAlignment="Center" RenderTransformOrigin="0.483,0.038"/>
+        <Label Content="Время начала" HorizontalAlignment="Right" Margin="0,94,10,321" Width="120" HorizontalContentAlignment="Center"/>
+        <Label Content="Фильм" HorizontalAlignment="Right" Margin="0,154,10,261" Width="120" HorizontalContentAlignment="Center"/>
     </Grid>
 </Window>
